# cudann

./: CMakeLists.txt  eval.ipynb  eval_rtx2080.csv  readme.md
eval/: eval.csv  eval1.csv  eval_a100.csv  notes.md
src/: dataset.cpp  dataset.h  main.cpp  neural  nn.cpp  nn.h
src2/: CMakeLists.txt  cuda-kernels.h  cuda-layer.h  cuda-network.h  cuda-tensor.h  mnist-training-script.cpp  mnist_loader.cpp  mnist_loader.h  neural_network.cpp  neural_network.h  tensor.cpp
src3/: app  model.h  training_script.cpp
src4/: dataloader.cpp  dataloader.h  main  main.cpp  model.cpp  model.h  readme.md  tensor.cu  tensor.h  tests  tests.cpp  utils.h
srcu/: cuda.cu  dataloader.cpp  dataloader.h  dataset.h  eval.csv  main.cpp  model.h  tensor.cu  tensor.cuh  tensor.h  tensor_tests.cu
utl/: style.py
